--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 </head>
 <body>
     <main>
+        <h2>Inserisci tutti i dati per generare una Password (non) Sicura!</h2>
         <p id="bad-password">
-            
+
         </p>
     </main>
 </body>
