Fix + added js script with 3 method

--- a/index.html
+++ b/index.html
@@ -10,9 +10,17 @@
 <body>
     <main>
         <h2>Inserisci tutti i dati per generare una Password (non) Sicura!</h2>
-        <p id="bad-password">
+        <!-- Primo Metodo -->
+        <p id="bad-password"></p>
 
-        </p>
+        <!-- Secondo Metodo -->
+        <p>[#2] - La tua Nuova Password è: <strong id="bad-password-2"></strong></p>
+
+        <!-- Terzo Metodo -->
+        <p>[#3] - La tua Nuova Password è: <strong id="bad-password-3"></strong></p>
     </main>
+
+    <!-- Script JS -->
+    <script src="js/script.js"></script>
 </body>
 </html>
